# Terry

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  APIS_AND_SERVICES.md  HOW_TERRY_WORKS.md  JESSE_PARITY.md  LICENSE  README.md  TERRY_BUILD_PLAN.md  docker-compose.yml  docs.md  pyproject.toml  requirements.txt  run.sh
docker/: Dockerfile
strategies/ChartDemo/: __init__.py
strategies/SampleTrend/: __init__.py
terry/: __init__.py  cli.py  config.py  context.py  enums.py  exceptions.py  factories.py  helpers.py  loader.py  strategy.py  testing_utils.py  utils.py
terry/candle_pipelines/: __init__.py  base_candles.py  gaussian_noise.py  gaussian_resampler.py  moving_block_bootstrap.py
terry/dashboard/: __init__.py  app.py
terry/data/: __init__.py  binance.py  dukascopy.py  importer.py  instruments.py  market_hours.py  storage.py  yahoo.py
terry/engine/: candle_store.py  exchange.py  metrics.py  simulator.py  store.py
terry/indicators/: __init__.py  acosc.py  ad.py  adosc.py  adx.py  adxr.py  alligator.py  alma.py  ao.py  apo.py  aroon.py  aroonosc.py  atr.py  avgprice.py  bandpass.py  beta.py  bollinger_bands.py  bollinger_bands_width.py  bop.py  cc.py  cci.py  cfo.py  cg.py  chande.py  chop.py  cksp.py  cmo.py  correl.py  correlation_cycle.py  cvi.py  cwma.py  damiani_volatmeter.py  dec_osc.py  decycler.py  dema.py  devstop.py  di.py  dm.py  donchian.py  dpo.py  (+131 more)
terry/mcp/: config.py  resources.py  (+1 more)
tests/: test_dashboard.py  test_data_sources.py  test_engine.py  test_jesse_parity.py  test_jesse_strategy_runtime.py  test_mcp_e2e.py
(+45 files in other folders)
