[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "terry-trade"
version = "0.2.3"
description = "Terry — a local, self-contained Jesse-compatible crypto research framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3,<2",
    "click>=8.1,<9",
    "mcp==1.26.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "requests>=2.31",
    "scipy>=1.11",
    "jesse-rust==1.2.0",
    "joblib>=1.5,<2",
    "scikit-learn>=1.7,<1.9",
    "matplotlib>=3.10,<4",
    "optuna>=4.2,<5",
    "statsmodels>=0.14,<1",
    "tqdm>=4.66,<5",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
terry = "terry.cli:main"

[tool.setuptools.packages.find]
include = ["terry*"]
